--- a/_sass/so-simple/_page.scss
+++ b/_sass/so-simple/_page.scss
@@ -280,3 +280,21 @@
     max-width: $main-sidebar-max-width;
   }
 }
+
+.img-circle {
+    border-radius: 50%;
+}
+
+.photo-gallery, .photo-gallery li {
+                list-style: none;
+                padding: 0;
+}
+
+.photo-gallery li {
+               display: inline-block;
+               width: 33%;
+}
+
+.photo-gallery li img {
+               width: 100%;
+}
