--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,11 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/docs/germs.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/docs/germs.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/docs/germs.ico">
+<link rel="manifest" href="/docs/site.webmanifest">
+<link rel="mask-icon" href="/docs/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 <!-- end custom head snippets -->
